# wisty

./: .gitignore  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: new.yml  release.yml
packaging/: wisty.desktop
scripts/: install-user.sh  package-user-tarball.sh  uninstall-user.sh
src/: App.css  App.tsx  Wisty.jsx  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json  wisty.desktop.hbs
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  spellcheck.rs  window_title.rs
src/components/: AboutDialog.tsx  AddedWordsDialog.tsx  AppShell.tsx  ConfirmDiscardModal.tsx  ErrorModal.tsx  FileLoadingModal.tsx  FileSavingModal.tsx  LargeFileOpenModal.tsx  MenuBar.tsx  StatusBar.tsx
src/constants/: ui.js
src/core/about/: libraryCredits.ts
src/core/app/: appContexts.tsx  contracts.ts  useAppLifecycle.ts  useCloseFlow.ts  useErrorModalQueue.ts  useFileLifecycle.ts  useGlobalKeyRouting.ts  useMenuCommandPipeline.ts  useMenuState.ts  useWindowTitleSync.ts
src/core/commands/: buildCommands.test.ts  buildCommands.ts  commandRegistry.ts  shortcutRouter.test.ts  shortcutRouter.ts
src/core/document/: documentStore.ts
src/core/editor/: editorAdapter.ts  searchPanelAdapter.ts
src/core/errors/: appError.ts
src/core/files/: fileService.ts
src/core/fonts/: fontDialog.ts
src/core/settings/: settingsStore.test.ts  settingsStore.ts  settingsTypes.ts
src/lib/: debugLog.js  path.js  shortcuts.js  textStats.js  theme.js
(+14 files in other folders)
